--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.show-sql=true
 security.basic.enabled=false
 spring.jpa.hibernate.ddl-auto=update
 spring.devtools.livereload.enabled=true
+spring.profiles.active=dev
 logging.level.com.example.bank=debug
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 
